# throwback

./: .gitignore  CrudApp.pm  Makefile  README.md  crudapp.conf.example  llms.txt
CrudApp/: Config.pm  DB.pm  DevServer.pm  Email.pm
CrudApp/DB/: MySQL.pm  SQLite.pm
dev/: runner.pl  schema_sqlite.sql  setup.pl
example/: .htaccess  MyApi.pm  admin_access.json  api.cgi  create_user.pl  debug_auth.pl  debug_request.pl  debug_token.pl  index.html  schema.sql  test_cgi_debug.pl  test_cgi_direct.pl  test_join.pl  test_server.pl  user_access.json
example/email_templates/: verify_email.txt
example/js/: crud-client.js
python/: auth.py  config.py  database.py  email_utils.py  main.py  pyproject.toml
